Remove width 100% to prevent minor overflow

--- a/_scss/tutorial/highlight_block.scss
+++ b/_scss/tutorial/highlight_block.scss
@@ -6,7 +6,6 @@
   .highlight {
     line-height: initial;
     overflow-y: scroll;
-    width: 100%;
     background-color: #424242;
     padding: 1em;
     margin: 0em;
